[FIX] fix bug swagger
